# axum-postgres-svelte

./: .gitignore
backend/: Cargo.toml  Dockerfile
backend/src/: api.rs  db.rs  error.rs  main.rs  models.rs
frontend/: package.json
src/: db.rs  main.rs
src/test-bin/: sqlx.rs
www/: package-lock.json  package.json
