[package]
name = "axum-postgres-svelte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["query"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors", "fs"] }
uuid = { version = "1.2.2", features = ["v4"] }
